<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="view"
            type="com.tip.capstone.mlearning.ui.main.MainView" />
    </data>

    <FrameLayout xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context="com.tip.capstone.mlearning.ui.main.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onStudyClicked()}"
                android:text="@string/study" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onAssessmentClicked()}"
                android:text="@string/assessment" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onGradesClicked()}"
                android:text="@string/grades" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onVideosClicked()}"
                android:text="@string/videos" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onSimulationClicked()}"
                android:text="@string/simulation" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="@{() -> view.onGlossaryClicked()}"
                android:text="@string/glossary" />

        </LinearLayout>

    </FrameLayout>

</layout>

